# tcd

./: .env.example  .gitignore  .markdownlint.json  .release.json  .rustfmt.toml  Cargo.toml  Cross.toml  README.md
.github/: prebuild.sh
.github/workflows/: build.yml  release.yml  rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  pg.rs  writer.rs
datasets/: Cargo.toml
datasets/examples/: comment_freq_by_channel.rs  comments_by_channel.rs  word_freq_by_channel.rs
docker/: Dockerfile.x86_64-unknown-linux-gnu
gui/: Cargo.toml
gui/src/: main.rs  modal.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
scripts/: comments.sql  migration.sql
tcd/: Cargo.toml
tcd/src/: lib.rs
tcd/src/channel/: channel.rs  prelude.rs
tcd/src/gql/: prelude.rs  request.rs  structs.rs
tcd/src/video/: mod.rs  prelude.rs  video.rs
tcd/tests/: channel.rs
twitch/: Cargo.toml
twitch/src/: cli.rs  lib.rs  main.rs  prisma.rs
twitch/src/channel/: channel.rs
twitch/src/gql/: gql.rs  mod.rs  prelude.rs  request.rs  structs.rs
twitch/src/video/: video.rs
