[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[[bin]]
name = "tcd"
path = "src/main.rs"

[dependencies]
chrono = "0.4.22"
clap = { version = "4.0.22", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3.25"
tokio = "1.21.2"
twitch = { path = "../twitch" }

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
default_features = false
features = ["postgresql"]
