[package]
name = "datasets"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
dotenv = "0.15.0"
serde = "1.0.147"
tokio = "1.21.2"
tcd = { path = "../tcd" }
csv = "1.1.6"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
default_features = false
features = ["postgresql"]
