[package]
name = "tcd-gui"
version = "0.1.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[[bin]]
name = "tcd"
path = "src/main.rs"

[dependencies]
iced = { version = "0.6.0", features = ["image", "tokio"] }
reqwest = "0.11.13"
tokio = "1.23.0"
tcd = { path = "../tcd" }
once_cell = "1.16.0"
futures = "0.3.25"
iced_native = "0.7.0"
