[package]
name = "tcd"
version = "0.1.2"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
async-trait = "0.1.58"
async-stream = "0.3.3"
chrono = "0.4.22"
futures = "0.3.25"
futures-util = "0.3.25"
reqwest = { version = "0.11.12", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.87"
tokio = "1.21.2"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
default_features = false
features = ["postgresql"]
