[package]
name = "twitch"
version = "0.2.0"
edition = "2021"
authors = ["Matthew Polak <contact@matteopolak.com>"]

[dependencies]
serde = "1.0.147"
async-trait = "0.1.58"
reqwest = { version = "0.11.12", features = ["json"] }
chrono = "0.4.22"
serde_json = "1.0.87"
futures = "0.3.25"
async-stream = "0.3.3"
futures-util = "0.3.25"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
default_features = false
features = ["postgresql"]
